--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities; */
 
+@import "custom.scss";
+
 @import"https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap";
 
 .text-gradient-primary {
@@ -71,11 +73,11 @@
 }
 
 body {
-    /* margin: 0; */
+    // margin: 0;
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
     font-weight: var(--bs-body-font-weight);
-    /* line-height: var(--bs-body-line-height); */
+    // line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
     background-color: var(--bs-body-bg);
@@ -13274,15 +13276,15 @@ html * {
     -moz-osx-font-smoothing: grayscale
 }
 
-/* html,
-body {
-    height: 100%
-}
+// html,
+// body {
+//     height: 100%
+// }
 
-body {
-    display: flex;
-    flex-direction: column
-} */
+// body {
+//     display: flex;
+//     flex-direction: column
+// }
 
 .page-wrapper {
     flex: 1 0 auto
