--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -13,3 +13,24 @@ main {
 .background-fixed {
     background-attachment: fixed;
 }
+
+.dark-mode .list-group-item.router-link-exact-active {
+    border-color: #6366f1 !important;
+}
+
+.list-group-item.router-link-exact-active {
+    z-index: 2;
+    color: #fff !important;
+    background-color: #6366f1 !important;
+    border-color: #6366f1 !important;
+    box-shadow: 0 0.5rem 1.125rem -0.5rem rgb(99 102 241 / 90%) !important;
+}
+
+.list-group-item + .list-group-item.router-link-exact-active {
+    margin-top: -1px;
+    border-top-width: 1px;
+}
+
+.dark-mode .list-group-item-action:not(.router-link-exact-active):hover {
+    color: #6366f1 !important;
+}
