--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,27 @@ main {
   background-attachment: fixed;
 }
 
+.dark-mode .list-group-item.router-link-exact-active {
+  border-color: #6366f1 !important;
+}
+
+.list-group-item.router-link-exact-active {
+  z-index: 2;
+  color: #fff !important;
+  background-color: #6366f1 !important;
+  border-color: #6366f1 !important;
+  box-shadow: 0 0.5rem 1.125rem -0.5rem rgba(99, 102, 241, 0.9) !important;
+}
+
+.list-group-item + .list-group-item.router-link-exact-active {
+  margin-top: -1px;
+  border-top-width: 1px;
+}
+
+.dark-mode .list-group-item-action:not(.router-link-exact-active):hover {
+  color: #6366f1 !important;
+}
+
 .text-gradient-primary {
   background: linear-gradient(to right, #6366f1, #8B5CF6, #D946EF);
   -webkit-background-clip: text;
