--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -32,3 +32,7 @@ main {
 .dark-mode .list-group-item-action:not(.router-link-exact-active):hover {
   color: #6366f1 !important;
 }
+
+.el-notification__title {
+  color: #333 !important;
+}
