--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -34,3 +34,8 @@ main {
 .dark-mode .list-group-item-action:not(.router-link-exact-active):hover {
     color: #6366f1 !important;
 }
+
+
+.el-notification__title {
+    color: #333 !important;
+}
