--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -49,3 +49,12 @@ main {
 .editor__content h6 {
   color: #333 !important;
 }
+
+.badge.bg-primary {
+  background: transparent !important;
+  background-color: transparent !important;
+  border: 2px solid #1a5cff;
+  color: #1a5cff;
+  border-radius: 12px;
+  padding: 8px 12px;
+}
