--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,6 +64,24 @@ main {
   padding: 8px 12px;
 }
 
+.navbar-light .navbar-nav .nav-link.router-link-exact-active {
+  color: #6366f1 !important;
+}
+
+.dark-mode .el-tabs__item {
+  color: #fff;
+}
+
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1.2rem !important;
+  padding-bottom: 1.2rem !important;
+}
+
 .text-gradient-primary {
   background: linear-gradient(to right, #6366f1, #8B5CF6, #D946EF);
   -webkit-background-clip: text;
