--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -58,3 +58,21 @@ main {
   border-radius: 12px;
   padding: 8px 12px;
 }
+
+.navbar-light .navbar-nav .nav-link.router-link-exact-active {
+  color: #6366f1 !important;
+}
+
+.dark-mode .el-tabs__item {
+  color: #fff;
+}
+
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1.2rem !important;
+  padding-bottom: 1.2rem !important;
+}
