--- a/public/css/app.css
+++ b/public/css/app.css
@@ -82,6 +82,16 @@ main {
   padding-bottom: 1.2rem !important;
 }
 
+@media (max-width: 991px) {
+  .offcanvas-end {
+    left: 0 !important;
+    transform: translateX(-100%) !important;
+  }
+}
+.offcanvas.show {
+  transform: none !important;
+}
+
 .text-gradient-primary {
   background: linear-gradient(to right, #6366f1, #8B5CF6, #D946EF);
   -webkit-background-clip: text;
