--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -76,3 +76,13 @@ main {
   padding-top: 1.2rem !important;
   padding-bottom: 1.2rem !important;
 }
+
+@media (max-width: 991px) {
+  .offcanvas-end {
+    left: 0 !important;
+    transform: translateX(-100%) !important;
+  }
+}
+.offcanvas.show {
+  transform: none !important;
+}
