--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -35,7 +35,6 @@ main {
     color: #6366f1 !important;
 }
 
-
 .el-notification__title {
     color: #333 !important;
 }
@@ -70,9 +69,7 @@ main {
 }
 
 .dark-mode .el-tabs__item {
-
     color: #fff;
-
 }
 
 // .navbar-brand {
@@ -92,4 +89,15 @@ main {
     justify-content: space-between;
     padding-top: 1.2rem !important;
     padding-bottom: 1.2rem !important;
+}
+
+@media (max-width : 991px) {
+    .offcanvas-end {
+        left: 0 !important;
+        transform: translateX(-100%) !important;
+    }
+}
+
+.offcanvas.show {
+    transform: none !important;
 }
