--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,6 +92,14 @@ main {
   transform: none !important;
 }
 
+::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+.swiper-wrapper {
+  height: auto !important;
+}
+
 .text-gradient-primary {
   background: linear-gradient(to right, #6366f1, #8B5CF6, #D946EF);
   -webkit-background-clip: text;
