--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4568,7 +4568,7 @@ fieldset:disabled .btn {
 .navbar-brand {
     padding-top: .5rem;
     padding-bottom: .5rem;
-    margin-right: 1rem;
+    //margin-right: 1rem;
     font-size: calc(1.2625rem + 0.15vw);
     text-decoration: none;
     white-space: nowrap
@@ -14893,7 +14893,7 @@ hr.dropdown-divider {
 }
 
 .navbar-brand>img {
-    margin-right: .4375rem
+    //margin-right: .4375rem
 }
 
 .navbar-toggler {
