--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -107,9 +107,9 @@ main {
     transform: none !important;
 }
 
-::-webkit-scrollbar {
-    width: 0 !important;
-}
+//::-webkit-scrollbar {
+//    width: 0 !important;
+//}
 
 .swiper-wrapper {
 
