--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -2,6 +2,7 @@ body {
     padding-top: 4rem;
     // direction: rtl;
     // text-align: right;
+    font-family: 'Orbitron', sans-serif !important;
 }
 
 main {
@@ -115,4 +116,8 @@ main {
 
     height: auto !important;
 
+}
+
+.object-cover {
+    object-fit: cover;
 }
