--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -2,7 +2,10 @@ body {
     padding-top: 4rem;
     // direction: rtl;
     // text-align: right;
-    font-family: 'Orbitron', sans-serif !important;
+    //font-family: 'Orbitron', sans-serif !important;
+
+
+    font-family: 'Roboto Condensed', sans-serif !important;
 }
 
 main {
