--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -4,8 +4,7 @@ body {
     // text-align: right;
     //font-family: 'Orbitron', sans-serif !important;
 
-
-    font-family: 'Roboto Condensed', sans-serif !important;
+    font-family: "Roboto Condensed", sans-serif !important;
 }
 
 main {
@@ -35,7 +34,7 @@ main {
     box-shadow: 0 0.5rem 1.125rem -0.5rem rgb(99 102 241 / 90%) !important;
 }
 
-.list-group-item+.list-group-item.router-link-exact-active {
+.list-group-item + .list-group-item.router-link-exact-active {
     margin-top: -1px;
     border-top-width: 1px;
 }
@@ -100,7 +99,7 @@ main {
     padding-bottom: 1.2rem !important;
 }
 
-@media (max-width : 991px) {
+@media (max-width: 991px) {
     .offcanvas-end {
         left: 0 !important;
         transform: translateX(-100%) !important;
@@ -116,11 +115,71 @@ main {
 //}
 
 .swiper-wrapper {
-
     height: auto !important;
-
 }
 
 .object-cover {
     object-fit: cover;
+}
+
+.cv-container {
+    & .card {
+        padding: 0.5rem !important;
+    }
+    & p {
+        font-size: 12px !important;
+    }
+    & h4 {
+        font-size: 0.9rem !important;
+    }
+    & h5 {
+        font-size: 0.8rem !important;
+    }
+    & div.h5 {
+        font-size: 0.7rem !important;
+    }
+
+    & .tools_item {
+        margin: 0.4rem 0;
+        & > a {
+            box-shadow: none !important;
+            border: 1px solid #e2e5f1 !important;
+        }
+        & .tools_img {
+            width: 80px !important;
+            height: 80px !important;
+        }
+    }
+}
+.cv-container-pdf {
+    & .download-cv-btn {
+        display: none !important;
+    }
+    & .card {
+        padding: 0.5rem !important;
+    }
+    & p {
+        font-size: 12px !important;
+    }
+    & h4 {
+        font-size: 0.9rem !important;
+    }
+    & h5 {
+        font-size: 0.8rem !important;
+    }
+    & div.h5 {
+        font-size: 0.7rem !important;
+    }
+
+    & .tools_item {
+        margin: 0.4rem 0;
+        & > a {
+            box-shadow: none !important;
+            border: 1px solid #e2e5f1 !important;
+        }
+        & .tools_img {
+            width: 80px !important;
+            height: 80px !important;
+        }
+    }
 }
